--- a/index.html
+++ b/index.html
@@ -518,12 +518,14 @@
      Portfolio
     </div>
     <ul class="nav-links">
-     <li><a href="#home" class="nav-link active">Home</a></li>
-     <li><a href="#about" class="nav-link">About</a></li>
-     <li><a href="#services" class="nav-link">Services</a></li>
-     <li><a href="#skills" class="nav-link">Skills</a></li>
-     <li><a href="#portfolio" class="nav-link">Portfolio</a></li>
-     <li><a href="#contact" class="nav-link">Contact</a></li>
+     <li><a href="index.html" class="nav-link active">Home</a></li>
+     <li><a href="About-me.html" class="nav-link">About</a></li>
+     <li><a href="Skills.html" class="nav-link">Skills</a></li>
+     <li><a href="Projects.html" class="nav-link">Projects</a></li>
+     <li><a href="Certificates.html" class="nav-link">Certificates</a></li>
+     <li><a href="Testimonials.html" class="nav-link">Testimonials</a></li>
+     <li><a href="Resume.html" class="nav-link">Resume</a></li>
+     <li><a href="Contact-Me.html" class="nav-link">Contact</a></li>
     </ul>
    </div>
   </nav><!-- Hero Section -->
