--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
- <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Professional Portfolio - Digital &amp; Industrial Excellence</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&amp;family=Lato:wght@300;400;700&amp;display=swap" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-  <script src="/_sdk/element_sdk.js"></script>
-  <style>
-        body {
-            box-sizing: border-box;
-        }
-        
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Professional Portfolio - Digital & Industrial Excellence</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <style>
         * {
             margin: 0;
             padding: 0;
@@ -74,20 +69,68 @@
             font-weight: 400;
             transition: all 0.3s ease;
             position: relative;
+            padding: 0.5rem 0;
+            overflow: hidden;
+        }
+
+        .nav-links a::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 0;
+            height: 2px;
+            background: linear-gradient(135deg, #00B4FF, #FFD700);
+            transition: width 0.3s ease;
         }
 
         .nav-links a:hover {
-            color: #00B4FF;
+            color: #0066CC; /* Dark sky blue */
+            text-shadow: 0 0 8px rgba(0, 180, 255, 0.7);
         }
 
+        .nav-links a:hover::after,
         .nav-links a.active::after {
+            width: 100%;
+        }
+
+        /* Sparkle effect */
+        .nav-links a::before {
             content: '';
             position: absolute;
-            bottom: -5px;
-            left: 0;
-            width: 100%;
-            height: 2px;
-            background: linear-gradient(135deg, #00B4FF, #FFD700);
+            top: 50%;
+            left: 50%;
+            width: 0;
+            height: 0;
+            background: radial-gradient(circle, rgba(255,255,255,0.8) 0%, transparent 70%);
+            opacity: 0;
+            transition: all 0.4s ease;
+            transform: translate(-50%, -50%);
+        }
+
+        .nav-links a:hover::before {
+            width: 100px;
+            height: 100px;
+            opacity: 0.6;
+            animation: sparkle 0.8s ease-out;
+        }
+
+        @keyframes sparkle {
+            0% {
+                width: 0;
+                height: 0;
+                opacity: 0;
+            }
+            50% {
+                width: 100px;
+                height: 100px;
+                opacity: 0.6;
+            }
+            100% {
+                width: 120px;
+                height: 120px;
+                opacity: 0;
+            }
         }
 
         /* Hero Section */
@@ -507,27 +550,26 @@
             }
         }
     </style>
-  <style>@view-transition { navigation: auto; }</style>
-  <script src="/_sdk/data_sdk.js" type="text/javascript"></script>
-  <script src="https://cdn.tailwindcss.com" type="text/javascript"></script>
- </head>
- <body><!-- Navigation -->
-  <nav class="navbar">
-   <div class="nav-container">
-    <div class="logo">
-     Portfolio
-    </div>
-    <ul class="nav-links">
-     <li><a href="index.html" class="nav-link active">Home</a></li>
-     <li><a href="About-me.html" class="nav-link">About</a></li>
-     <li><a href="Skills.html" class="nav-link">Skills</a></li>
-     <li><a href="Projects.html" class="nav-link">Projects</a></li>
-     <li><a href="Certificates.html" class="nav-link">Certificates</a></li>
-     <li><a href="Testimonials.html" class="nav-link">Testimonials</a></li>
-     <li><a href="Resume.html" class="nav-link">Resume</a></li>
-     <li><a href="Contact-Me.html" class="nav-link">Contact</a></li>
-    </ul>
-   </div>
+</head>
+<body>
+    <!-- Navigation -->
+    <nav class="navbar">
+        <div class="nav-container">
+            <div class="logo">
+                Portfolio
+            </div>
+            <ul class="nav-links">
+                <li><a href="index.html" class="nav-link active">Home</a></li>
+                <li><a href="About-me.html" class="nav-link">About</a></li>
+                <li><a href="Skills.html" class="nav-link">Skills</a></li>
+                <li><a href="Projects.html" class="nav-link">Projects</a></li>
+                <li><a href="Certificates.html" class="nav-link">Certificates</a></li>
+                <li><a href="Testimonials.html" class="nav-link">Testimonials</a></li>
+                <li><a href="Resume.html" class="nav-link">Resume</a></li>
+                <li><a href="Contact-Me.html" class="nav-link">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
   </nav><!-- Hero Section -->
   <section id="home" class="hero">
    <div class="hero-content">
