--- a/About-me.html
+++ b/About-me.html
@@ -596,11 +596,11 @@
      ABOUT
     </div>
     <ul class="nav-links">
-     <li><a href="#home">Home</a></li>
-     <li><a href="#about">About</a></li>
-     <li><a href="#experience">Experience</a></li>
-     <li><a href="#timeline">Timeline</a></li>
-     <li><a href="#contact">Contact</a></li>
+     <li><a href="index.html">Home</a></li>
+     <li><a href="Skills.html">Skills</a></li>
+     <li><a href="Projects.html">Projects</a></li>
+     <li><a href="Certificates.html">Certificates</a></li>
+     <li><a href="Contact-Me.html">Contact</a></li>
     </ul>
    </div>
   </nav>
