--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="logo">
-                Portfolio
+                Roushan Kumar (Gupta)
             </div>
             <ul class="nav-links">
                 <li><a href="index.html" class="nav-link active">Home</a></li>
@@ -582,11 +582,12 @@
   <section id="about" class="section">
    <h2 class="section-title">About Me</h2>
    <div class="about-content">
-    <div class="profile-image"><i class="fas fa-user"></i>
+    <div class="WhatsApp Image 2025-11-02 at 17.25.52_ceeb9ee8 (1).jpg"><i class="fas fa-user"></i>
     </div>
     <div class="about-text">
-     <p id="about-bio">Multi-disciplinary professional with expertise spanning construction project management, web development, and creative design. Proven track record of delivering complex projects for enterprise clients while maintaining the highest standards of quality and innovation.</p>
-     <p>With a unique blend of technical skills and industry experience, I bridge the gap between traditional engineering practices and modern digital solutions, making me an ideal candidate for forward-thinking organizations.</p>
+     <p id="about-bio">I build systems — whether it’s a construction site or a digital platform.</p>
+     <p>As a full-spectrum Construction Manager, I handle BOQs, quotations, and project execution with on-ground precision. As a tech-driven freelancer, I design websites, manage digital campaigns, and create content that moves businesses forward.</p>
+     <p>From site coordination to SEO strategy, I blend engineering discipline with creative innovation — delivering structure, clarity, and results across both worlds.</p>
     </div>
    </div>
   </section><!-- Services Section -->
@@ -748,13 +749,14 @@
     </div>
     <div class="contact-info">
      <h3>Get In Touch</h3>
-     <div class="contact-item"><i class="fas fa-envelope"></i> <span id="contact-email">professional@example.com</span>
+     <div class="contact-item"><i class="fas fa-envelope"></i> <span id="contact-email">rktech624@gmail.com</span>  
+     <div class="contact-item"><i class="fas fa-envelope"></i> <span id="contact-email">roushank2515@gmail.com</span>
      </div>
-     <div class="contact-item"><i class="fas fa-phone"></i> <span id="contact-phone">+1 (555) 123-4567</span>
+     <div class="contact-item"><i class="fas fa-phone"></i> <span id="contact-phone">+91- 6204782131</span>
      </div>
      <div class="contact-item"><i class="fas fa-map-marker-alt"></i> <span>Available for Remote &amp; On-site Projects</span>
      </div>
-     <div class="social-links"><a href="#" class="social-link" id="linkedin-link"> <i class="fab fa-linkedin-in"></i> </a> <a href="#" class="social-link"> <i class="fab fa-github"></i> </a> <a href="#" class="social-link"> <i class="fab fa-behance"></i> </a> <a href="#" class="social-link"> <i class="fas fa-file-pdf"></i> </a>
+     <div class="social-links"><a href="#" class="social-link" id="linkedin-link"> <i class="fab fa-linkedin-in"></i> </a> <a href="https://www.linkedin.com/in/roushan-kumar-7bb400239?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BqPMWR2E%2BQoGnanudhZLaAg%3D%3D" class="social-link"> <i class="fab fa-github"></i> </a> <a href="https://github.com/roushan62" class="social-link"> <i class="fab fa-behance"></i> </a> <a href="#" class="social-link"> <i class="fas fa-file-pdf"></i> </a>
      </div>
     </div>
    </div>
@@ -765,9 +767,9 @@
             hero_headline: "Crafting Digital & Industrial Excellence",
             hero_tagline: "Combining precision, creativity, and technology to deliver exceptional results for major corporations and innovative projects.",
             about_bio: "Multi-disciplinary professional with expertise spanning construction project management, web development, and creative design. Proven track record of delivering complex projects for enterprise clients while maintaining the highest standards of quality and innovation.",
-            contact_email: "professional@example.com",
-            contact_phone: "+1 (555) 123-4567",
-            linkedin_url: "https://linkedin.com/in/yourprofile",
+            contact_email: "rktech624@gmail.com, roushank2515@gmail.com",
+            contact_phone: "+91-6204782131",
+            linkedin_url: "https://www.linkedin.com/in/roushan-kumar-7bb400239?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BqPMWR2E%2BQoGnanudhZLaAg%3D%3D",
             background_color: "#0D0D0D",
             primary_color: "#00B4FF",
             accent_color: "#FFD700",
