--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         }
 
         .nav-links a:hover {
-            color: #0066CC; /* Dark sky blue */
+            color: #0066CC;
             text-shadow: 0 0 8px rgba(0, 180, 255, 0.7);
         }
 
@@ -233,6 +233,7 @@
             align-items: center;
         }
 
+        /* Profile Photo Styles */
         .profile-image {
             width: 250px;
             height: 250px;
@@ -243,21 +244,87 @@
             justify-content: center;
             margin: 0 auto;
             position: relative;
+            overflow: hidden;
         }
 
-        .profile-image::before {
-            content: '';
+        .photo-container {
             width: 240px;
             height: 240px;
             border-radius: 50%;
-            background: #0D0D0D;
-            position: absolute;
+            position: relative;
+            overflow: hidden;
+            z-index: 2;
         }
 
-        .profile-image i {
-            font-size: 4rem;
-            color: #00B4FF;
+        .profile-photo {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 50%;
+            transition: all 0.5s ease;
+            filter: brightness(0.9);
+        }
+
+        .hover-light {
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(
+                90deg,
+                transparent,
+                rgba(0, 180, 255, 0.4),
+                transparent
+            );
+            transition: left 0.7s ease;
+            z-index: 3;
+        }
+
+        /* Hover Effects */
+        .profile-image:hover .profile-photo {
+            transform: scale(1.05);
+            filter: brightness(1.1) contrast(1.1);
+            box-shadow: 0 0 25px rgba(0, 180, 255, 0.6);
+        }
+
+        .profile-image:hover .hover-light {
+            left: 100%;
+        }
+
+        /* Pulsing animation for the container */
+        .profile-image::before {
+            content: '';
+            position: absolute;
+            top: -5px;
+            left: -5px;
+            right: -5px;
+            bottom: -5px;
+            background: linear-gradient(135deg, #00B4FF, #FFD700, #00B4FF);
+            border-radius: 50%;
             z-index: 1;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+        }
+
+        .profile-image:hover::before {
+            opacity: 1;
+            animation: pulse 2s infinite;
+        }
+
+        @keyframes pulse {
+            0% {
+                transform: scale(1);
+                opacity: 0.7;
+            }
+            50% {
+                transform: scale(1.05);
+                opacity: 0.4;
+            }
+            100% {
+                transform: scale(1);
+                opacity: 0.7;
+            }
         }
 
         .about-text {
@@ -570,26 +637,35 @@
             </ul>
         </div>
     </nav>
-  </nav><!-- Hero Section -->
-  <section id="home" class="hero">
-   <div class="hero-content">
-    <h1 id="hero-headline">Crafting Digital &amp; Industrial Excellence</h1>
-    <p id="hero-tagline">Combining precision, creativity, and technology to deliver exceptional results for major corporations and innovative projects.</p>
-    <div class="cta-buttons"><a href="#portfolio" class="btn btn-primary">View My Work</a> <a href="#contact" class="btn btn-secondary">Hire Me</a>
-    </div>
-   </div>
-  </section><!-- About Section -->
-  <section id="about" class="section">
-   <h2 class="section-title">About Me</h2>
-   <div class="about-content">
-    <div class="WhatsApp Image 2025-11-02 at 17.25.52_ceeb9ee8 (1).jpg"><i class="fas fa-user"></i>
-    </div>
-    <div class="about-text">
-     <p id="about-bio">I build systems — whether it’s a construction site or a digital platform.</p>
-     <p>As a full-spectrum Construction Manager, I handle BOQs, quotations, and project execution with on-ground precision. As a tech-driven freelancer, I design websites, manage digital campaigns, and create content that moves businesses forward.</p>
-     <p>From site coordination to SEO strategy, I blend engineering discipline with creative innovation — delivering structure, clarity, and results across both worlds.</p>
-    </div>
-   </div>
+
+    <!-- Hero Section -->
+    <section id="home" class="hero">
+        <div class="hero-content">
+            <h1 id="hero-headline">Crafting Digital &amp; Industrial Excellence</h1>
+            <p id="hero-tagline">Combining precision, creativity, and technology to deliver exceptional results for major corporations and innovative projects.</p>
+            <div class="cta-buttons">
+                <a href="#portfolio" class="btn btn-primary">View My Work</a>
+                <a href="#contact" class="btn btn-secondary">Hire Me</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <section id="about" class="section">
+        <h2 class="section-title">About Me</h2>
+        <div class="about-content">
+            <div class="profile-image">
+                <div class="photo-container">
+                    <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=300&q=80" alt="Roushan Kumar" class="profile-photo">
+                    <div class="hover-light"></div>
+                </div>
+            </div>
+            <div class="about-text">
+                <p id="about-bio">I build systems — whether it's a construction site or a digital platform.</p>
+                <p>As a full-spectrum Construction Manager, I handle BOQs, quotations, and project execution with on-ground precision. As a tech-driven freelancer, I design websites, manage digital campaigns, and create content that moves businesses forward.</p>
+                <p>From site coordination to SEO strategy, I blend engineering discipline with creative innovation — delivering structure, clarity, and results across both worlds.</p>
+            </div>
+        </div>
   </section><!-- Services Section -->
   <section id="services" class="section">
    <h2 class="section-title">Services</h2>
