--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
         <div class="about-content">
             <div class="profile-image">
                 <div class="photo-container">
-                    <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=300&q=80" alt="Roushan Kumar" class="profile-photo">
+                    <img src="WhatsApp Image 2025-11-02 at 17.25.52_ceeb9ee8 (1).jpg" alt="Roushan Kumar" class="profile-photo">
                     <div class="hover-light"></div>
                 </div>
             </div>
