--- a/index.html
+++ b/index.html
@@ -846,9 +846,8 @@
   </div><!-- Navigation -->
   <nav class="navbar">
    <div class="nav-content">
-    <div class="logo">
-     RK.TECH
-    </div>
+    <a href="index.html" class="logo">RK.TECH</a>
+
     <ul class="nav-menu">
      <li><a href="index.html" class="nav-link active">Home</a></li>
      <li><a href="About-me.html" class="nav-link">About</a></li>
@@ -865,8 +864,8 @@
    <div class="hero-container">
     <div class="hero-content">
      <h1 class="hero-name" id="heroName">ROUSHAN KUMAR</h1>
-     <p class="hero-tagline" id="heroTagline">AI-Powered Full-Stack Developer</p>
-     <p class="hero-description" id="heroDescription">Architecting next-generation digital solutions with cutting-edge AI integration. Specialized in creating intelligent systems that drive innovation for industry leaders like Google, IBM, Adani, Reliance, and BHEL.</p>
+     <p class="hero-tagline" id="heroTagline">Full-Spectrum Construction & Digital Systems Innovator</p>
+     <p class="hero-description" id="heroDescription">Engineering real-world infrastructure and intelligent digital ecosystems through precision, design, and AI-driven innovation. Turning complex challenges into scalable, high-performance solutions that shape the future of industries.</p>
      <div class="cta-buttons"><a href="#projects" class="cta-btn cta-primary" id="ctaPrimary"> <i class="fas fa-rocket"></i> <span>View My Work</span> </a> <a href="#contact" class="cta-btn cta-secondary" id="ctaSecondary"> <i class="fas fa-handshake"></i> <span>Hire Me</span> </a>
      </div>
     </div>
@@ -890,16 +889,16 @@
   </section><!-- Quick Intro Section -->
   <section class="section" id="about">
    <div class="section-container">
-    <h2 class="section-title" id="introTitle">QUANTUM ARCHITECT</h2>
+    <h2 class="section-title" id="introTitle">INTEGRATED SYSTEMS ARCHITECT</h2>
     <div class="intro-content">
      <div class="intro-text">
-      <p>Transforming complex business challenges into elegant digital solutions through the power of artificial intelligence and cutting-edge technology. With expertise spanning full-stack development, machine learning, and enterprise architecture, I deliver scalable solutions that drive measurable results for Fortune 500 companies.</p><br>
-      <p>My passion lies in bridging the gap between innovative technology and practical business applications, ensuring every solution not only meets current needs but anticipates future growth.</p>
+      <p>Engineering the intersection of construction, technology, and AI-driven automation. From on-site project management and BOQ optimization to intelligent digital systems and enterprise solutions — I design frameworks that enhance productivity, precision, and profitability.</p><br>
+      <p>By blending real-world operations with digital transformation, I help organizations move from manual coordination to data-backed, scalable ecosystems that deliver measurable growth.</p>
      </div>
      <div class="intro-stats">
       <div class="stat-card">
        <div class="stat-number">
-        50+
+        20+
        </div>
        <div class="stat-label">
         Projects Delivered
@@ -907,7 +906,7 @@
       </div>
       <div class="stat-card">
        <div class="stat-number">
-        5+
+        2+
        </div>
        <div class="stat-label">
         Years Experience
@@ -915,7 +914,7 @@
       </div>
       <div class="stat-card">
        <div class="stat-number">
-        15+
+        5+
        </div>
        <div class="stat-label">
         Technologies Mastered
@@ -932,55 +931,82 @@
      </div>
     </div>
    </div>
-  </section><!-- Skills Preview -->
-  <section class="section" id="skills">
-   <div class="section-container">
+<section class="section" id="skills">
+  <div class="section-container">
     <h2 class="section-title" id="skillsTitle">CORE TECHNOLOGIES</h2>
     <div class="skills-grid">
-     <div class="skill-card">
-      <div class="skill-icon">
-       <i class="fab fa-react"></i>
+      <div class="skill-card">
+        <div class="skill-icon">
+          <i class="fas fa-tasks"></i>
+        </div>
+        <h3 class="skill-name">Project Management</h3>
+        <p class="skill-desc">BOQ drafting, cost estimation, work scheduling (Gantt charts), and vendor coordination for end-to-end project delivery.</p>
       </div>
-      <h3 class="skill-name">Frontend Mastery</h3>
-      <p class="skill-desc">React, Vue.js, Angular with advanced state management, modern UI frameworks, and responsive design principles</p>
-     </div>
-     <div class="skill-card">
-      <div class="skill-icon">
-       <i class="fas fa-server"></i>
+      <div class="skill-card">
+        <div class="skill-icon">
+          <i class="fas fa-hard-hat"></i>
+        </div>
+        <h3 class="skill-name">Construction & Site Operations</h3>
+        <p class="skill-desc">On-site supervision, material management, progress tracking, and contractor coordination ensuring time-bound execution.</p>
       </div>
-      <h3 class="skill-name">Backend Architecture</h3>
-      <p class="skill-desc">Node.js, Python, microservices architecture with scalable cloud infrastructure and API development</p>
-     </div>
-     <div class="skill-card">
-      <div class="skill-icon">
-       <i class="fas fa-brain"></i>
+      <div class="skill-card">
+        <div class="skill-icon">
+          <i class="fas fa-chart-line"></i>
+        </div>
+        <h3 class="skill-name">Budgeting & Cost Control</h3>
+        <p class="skill-desc">Expert in rate analysis, procurement planning, expense optimization, and financial reporting for construction and operations.</p>
       </div>
-      <h3 class="skill-name">AI Integration</h3>
-      <p class="skill-desc">Machine Learning, Neural Networks, and intelligent automation systems for business optimization</p>
-     </div>
-     <div class="skill-card">
-      <div class="skill-icon">
-       <i class="fas fa-mobile-alt"></i>
+      <div class="skill-card">
+        <div class="skill-icon">
+          <i class="fas fa-building"></i>
+        </div>
+        <h3 class="skill-name">Business Operations</h3>
+        <p class="skill-desc">Procurement, sales, inventory management, and process automation to maintain workflow efficiency across departments.</p>
       </div>
-      <h3 class="skill-name">Mobile Development</h3>
-      <p class="skill-desc">React Native, Flutter with cross-platform optimization and native performance</p>
-     </div>
-     <div class="skill-card">
-      <div class="skill-icon">
-       <i class="fas fa-cloud"></i>
+      <div class="skill-card">
+        <div class="skill-icon">
+          <i class="fas fa-file-invoice-dollar"></i>
+        </div>
+        <h3 class="skill-name">Quotation & Invoicing Systems</h3>
+        <p class="skill-desc">Preparation of detailed quotations, progressive invoices, reconciliation, and digital record management.</p>
       </div>
-      <h3 class="skill-name">Cloud Solutions</h3>
-      <p class="skill-desc">AWS, Azure, Docker, Kubernetes for enterprise-grade deployment and scalability</p>
-     </div>
-     <div class="skill-card">
-      <div class="skill-icon">
-       <i class="fas fa-shield-alt"></i>
+      <div class="skill-card">
+        <div class="skill-icon">
+          <i class="fas fa-robot"></i>
+        </div>
+        <h3 class="skill-name">Digital Workflow & Automation</h3>
+        <p class="skill-desc">Building smart Excel dashboards, cloud-based tracking sheets, and AI-assisted reporting tools for data-driven decisions.</p>
       </div>
-      <h3 class="skill-name">Cybersecurity</h3>
-      <p class="skill-desc">Advanced security protocols, penetration testing, and secure application development</p>
-     </div>
+      <div class="skill-card">
+        <div class="skill-icon">
+          <i class="fas fa-laptop-code"></i>
+        </div>
+        <h3 class="skill-name">Web & Creative Development</h3>
+        <p class="skill-desc">Designing responsive websites, blogs, and marketing visuals using WordPress, HTML/CSS, Canva, and content strategy tools.</p>
+      </div>
+      <div class="skill-card">
+        <div class="skill-icon">
+          <i class="fas fa-bullhorn"></i>
+        </div>
+        <h3 class="skill-name">Marketing & Brand Communication</h3>
+        <p class="skill-desc">Creating targeted campaigns, SEO-friendly blogs, and email marketing systems to increase visibility and client reach.</p>
+      </div>
+      <div class="skill-card">
+        <div class="skill-icon">
+          <i class="fas fa-brain"></i>
+        </div>
+        <h3 class="skill-name">AI Tools & Smart Systems</h3>
+        <p class="skill-desc">Using ChatGPT, Notion AI, and automation bots for project documentation, analytics, and productivity enhancement.</p>
+      </div>
+      <div class="skill-card">
+        <div class="skill-icon">
+          <i class="fas fa-users"></i>
+        </div>
+        <h3 class="skill-name">Team Leadership & Coordination</h3>
+        <p class="skill-desc">Cross-functional team management, client communication, and progress monitoring with clear milestone tracking.</p>
+      </div>
     </div>
-   </div>
+  </div>
   </section><!-- Featured Projects -->
   <section class="section" id="projects">
    <div class="section-container">
@@ -1084,7 +1110,7 @@
     </div>
    </div>
    <div class="footer-bottom">
-    <p>© 2025 ROUSHAN KUMAR | QUANTUM-GRADE TECHNOLOGY SOLUTIONS</p>
+    <p>© 2025 Roushan Kumar | Crafting Intelligent Digital Experiences</p>
    </div>
   </footer>
   <script>
